--- a/package.json
+++ b/package.json
@@ -13,15 +13,15 @@
     "start": "node server.js"
   },
   "dependencies": {
-    "react": "^19.1.1",
-    "react-dom": "^19.1.1",
     "express": "^4.18.2",
-    "@vitejs/plugin-react": "^4.2.1"
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
     "@types/react": "^18.2.56",
     "@types/react-dom": "^18.2.19",
+    "@vitejs/plugin-react": "^4.2.1",
     "typescript": "~5.8.2",
     "vite": "^6.2.0"
   }
